test/src/phonology/positive-pairs-out.txt

sting^NGKK^aAB>st
stak0000st
  #:0
  s
  t
  i:a
  n:k
  g:0
  ^NGKK:0
  ^aAB:0
  >:0
  s
  t
  #:0
  ACCEPTED

bógv^IUML>i
bøg000i
  #:0
  b
  ó:ø
  g
  v:0
  ^IUML:0
  >:0
  i
  #:0
  ACCEPTED

flúgv^IUML^VDEL
flýg000
  #:0
  f
  l
  ú:ý
  g
  v:0
  ^IUML:0
  ^VDEL:0
  #:0
  ACCEPTED

flúgv^VSH^VDEL>u
flug0000u
  #:0
  f
  l
  ú:u
  g
  v:0
  ^VSH:0
  ^VDEL:0
  >:0
  u
  #:0
  ACCEPTED

búgv^GVDEL>s
bú0000s
  #:0
  b
  ú
  g:0
  v:0
  ^GVDEL:0
  >:0
  s
  #:0
  ACCEPTED

bógv^VDEL>s
bóg000s
  #:0
  b
  ó
  g
  v:0
  ^VDEL:0
  >:0
  s
  #:0
  ACCEPTED

skógv^GVDEL>m
skó0000m
  #:0
  s
  k
  ó
  g:0
  v:0
  ^GVDEL:0
  >:0
  m
  #:0
  ACCEPTED

skýggj^GGDEL>s
ský00000s
  #:0
  s
  k
  ý
  g:0
  g:0
  j:0
  ^GGDEL:0
  >:0
  s
  #:0
  ACCEPTED

kríggj^GDEL>s
kríg0000s
  #:0
  k
  r
  í
  g
  g:0
  j:0
  ^GDEL:0
  >:0
  s
  #:0
  ACCEPTED

sjógv^GDEL>ar
sjó0v00ar
  #:0
  s
  j
  ó
  g:0
  v
  ^GDEL:0
  >:0
  a
  r
  #:0
  ACCEPTED

brúður^EPH^RDEL>ar
brúð00000ar
  #:0
  b
  r
  ú
  ð
  u:0
  r:0
  ^EPH:0
  ^RDEL:0
  >:0
  a
  r
  #:0
  ACCEPTED

ris>um>num
ris0u00num
  #:0
  r
  i
  s
  >:0
  u
  m:0
  >:0
  n
  u
  m
  #:0
  ACCEPTED

skógv^GVDEL>m>num
skó000000num
  #:0
  s
  k
  ó
  g:0
  v:0
  ^GVDEL:0
  >:0
  m:0
  >:0
  n
  u
  m
  #:0
  ACCEPTED

hjall>s
hjal00s
  #:0
  h
  j
  a
  l
  l:0
  >:0
  s
  #:0
  ACCEPTED

rygg>s
ryg00s
  #:0
  r
  y
  g
  g:0
  >:0
  s
  #:0
  ACCEPTED

hjall>ar
hjall0ar
  #:0
  h
  j
  a
  l
  l
  >:0
  a
  r
  #:0
  ACCEPTED

all>t
al00t
  #:0
  a
  l
  l:0
  >:0
  t
  #:0
  ACCEPTED

send>di
sen00di
  #:0
  s
  e
  n
  d:0
  >:0
  d
  i
  #:0
  ACCEPTED

hirð>di
hir00di
  #:0
  h
  i
  r
  ð:0
  >:0
  d
  i
  #:0
  ACCEPTED

sett>ti
set00ti 	      
  #:0
  s
  e
  t
  t:0
  >:0
  t
  i
  #:0
  ACCEPTED

leið>di
leid0di 
  #:0
  l
  e
  i
  ð:d
  >:0
  d
  i
  #:0
  ACCEPTED

leið>di
leid0di
  #:0
  l
  e
  i
  ð:d
  >:0
  d
  i
  #:0
  ACCEPTED

greið>di
greid0di
  #:0
  g
  r
  e
  i
  ð:d
  >:0
  d
  i
  #:0
  ACCEPTED

ryð^WVV>di
rud00di
  #:0
  r
  y:u
  ð:d
  ^WVV:0
  >:0
  d
  i
  #:0
  ACCEPTED

summar^EPH>i
sum00r00i
  #:0
  s
  u
  m
  m:0
  a:0
  r
  ^EPH:0
  >:0
  i
  #:0
  ACCEPTED

himmal^EPH^UUML>um
him00l000um
  #:0
  h
  i
  m
  m:0
  a:0
  l
  ^EPH:0
  ^UUML:0
  >:0
  u
  m
  #:0
  ACCEPTED

primus>s
primus00
  #:0
  p
  r
  i
  m
  u
  s
  >:0
  s:0
  #:0
  ACCEPTED

primus>s
primus00
  #:0
  p
  r
  i
  m
  u
  s
  >:0
  s:0
  #:0
  ACCEPTED

grís>s
grís00
  #:0
  g
  r
  í
  s
  >:0
  s:0
  #:0
  ACCEPTED

leið>t
leit0t
  #:0
  l
  e
  i
  ð:t
  >:0
  t
  #:0
  ACCEPTED

keyp>di
keyp0ti
  #:0
  k
  e
  y
  p
  >:0
  d:t
  i
  #:0
  ACCEPTED

merk>di
merk0ti
  #:0
  m
  e
  r
  k
  >:0
  d:t
  i
  #:0
  ACCEPTED

mikil^EPH>t
miki000ð
  #:0
  m
  i
  k
  i
  l:0
  ^EPH:0
  >:0
  t:ð
  #:0
  ACCEPTED

gamal^EPH>t
gamal00t
  #:0
  g
  a
  m
  a
  l
  ^EPH:0
  >:0
  t
  #:0
  ACCEPTED

kríggj^GDEL>num
kríg0000num	
  #:0
  k
  r
  í
  g
  g:0
  j:0
  ^GDEL:0
  >:0
  n
  u
  m
  #:0
  ACCEPTED

beiggj^JI>i
beigg000i
  #:0
  b
  e
  i
  g
  g
  j:0
  ^JI:0
  >:0
  i
  #:0
  ACCEPTED

verkj^JDEL>ur
verk000ur
  #:0
  v
  e
  r
  k
  j:0
  ^JDEL:0
  >:0
  u
  r
  #:0
  ACCEPTED

heyggj>i
heygg00i
  #:0
  h
  e
  y
  g
  g
  j:0
  >:0
  i
  #:0
  ACCEPTED

hylj2>ar
hylj0ar
  #:0
  h
  y
  l
  j2:j
  >:0
  a
  r
  #:0
  ACCEPTED

økur^EPH^UUML>um
øk0r000um
  #:0
  ø
  k
  u:0
  r
  ^EPH:0
  ^UUML:0
  >:0
  u
  m
  #:0
  ACCEPTED

lykil^EPH>an
lyk0l00an
  #:0
  l
  y
  k
  i:0
  l
  ^EPH:0
  >:0
  a
  n
  #:0
  ACCEPTED

aftan^EPH>
aftan00
  #:0
  a
  f
  t
  a
  n
  ^EPH:0
  >:0
  #:0
  ACCEPTED

vakin^EPH>ir
vak0n00ir
  #:0
  v
  a
  k
  i:0
  n
  ^EPH:0
  >:0
  i
  r
  #:0
  ACCEPTED

gamal^EPH^UUML
gomul00
  #:0
  g
  a:o
  m
  a:u
  l
  ^EPH:0
  ^UUML:0
  #:0
  ACCEPTED

gamal^EPH^UUML>u
goml000u

Error: Strings have an unequal number of symbols.

tank^UUML
tonk0
  #:0
  t
  a:o
  n
  k
  ^UUML:0
  #:0
  ACCEPTED

band^UUML
bond00

Error: Strings have an unequal number of symbols.

hamar^EPH^UUML>um
hom0r000um
  #:0
  h
  a:o
  m
  a:0
  r
  ^EPH:0
  ^UUML:0
  >:0
  u
  m
  #:0
  ACCEPTED

dag^UUML>um
døg00um
  #:0
  d
  a:ø
  g
  ^UUML:0
  >:0
  u
  m
  #:0
  ACCEPTED

sag^UUML>a
søg00a
  #:0
  s
  a:ø
  g
  ^UUML:0
  >:0
  a
  #:0
  ACCEPTED

all^UUML>
øll00
  #:0
  a:ø
  l
  l
  ^UUML:0
  >:0
  #:0
  ACCEPTED

akur^EPH^UUML>um
øk0r000um
  #:0
  a:ø
  k
  u:0
  r
  ^EPH:0
  ^UUML:0
  >:0
  u
  m
  #:0
  ACCEPTED

dag^IUML>i
deg00i
  #:0
  d
  a:e
  g
  ^IUML:0
  >:0
  i
  #:0
  ACCEPTED

son^IUML>i
syn00i
  #:0
  s
  o:y
  n
  ^IUML:0
  >:0
  i
  #:0
  ACCEPTED

bógv^IUML>i
bøg000i
  #:0
  b
  ó:ø
  g
  v:0
  ^IUML:0
  >:0
  i
  #:0
  ACCEPTED

ung^IUMLr>i
yng0r0i
  #:0
  u:y
  n
  g
  ^IUML:0
  r
  >:0
  i
  #:0
  ACCEPTED

fjørð^IUML>i
f0irð00i
  #:0
  f
  j:0
  ø:i
  r
  ð
  ^IUML:0
  >:0
  i
  #:0
  ACCEPTED

fløtt^OEAa
flatt0a
  #:0
  f
  l
  ø:a
  t
  t
  ^OEA:0
  a
  #:0
  ACCEPTED

fonn^OA>ar
fann00ar
  #:0
  f
  o:a
  n
  n
  ^OA:0
  >:0
  a
  r
  #:0
  ACCEPTED

dreing^EIO>i
dro0ng00i
  #:0
  d
  r
  e:o
  i:0
  n
  g
  ^EIO:0
  >:0
  i
  #:0
  ACCEPTED

flek^WVV>t
flak00t 
  #:0
  f
  l
  e:a
  k
  ^WVV:0
  >:0
  t
  #:0
  ACCEPTED

flek^WVV>t
flak00t 
  #:0
  f
  l
  e:a
  k
  ^WVV:0
  >:0
  t
  #:0
  ACCEPTED

vel^WVV>di
val00di 
  #:0
  v
  e:a
  l
  ^WVV:0
  >:0
  d
  i
  #:0
  ACCEPTED

b0ít^AB1
beit0
  #:0
  b
  0:e
  í:i
  t
  ^AB1:0
  #:0
  ACCEPTED

gev^AB3
gav0
  #:0
  g
  e:a
  v
  ^AB3:0
  #:0
  ACCEPTED

góð>t
got0t
  #:0
  g
  ó:o
  ð:t
  >:0
  t
  #:0
  ACCEPTED

skjót>t
skjót0t
  #:0
  s
  k
  j
  ó
  t
  >:0
  t
  #:0
  ACCEPTED
